[gd_scene load_steps=2 format=3 uid="uid://tgjo3egxar5h"]

[ext_resource type="Script" uid="uid://dennlm6yr8ohc" path="res://TutorialManager.gd" id="1_6rdc0"]

[node name="TutorialLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_6rdc0")

[node name="TextBubble" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TextBubble"]
layout_mode = 2

[node name="TutorialText" type="Label" parent="TextBubble/VBoxContainer"]
layout_mode = 2
text = "blah"

[node name="SkipTutorialCheck" type="CheckBox" parent="TextBubble/VBoxContainer"]
layout_mode = 2
text = "Don't show this again"

[node name="NextButton" type="Button" parent="TextBubble/VBoxContainer"]
layout_mode = 2

[node name="HighlightArrow" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
